Allow a wallet to specify the validity of WIA during issuance
