# openapi/openapi.json
@@ -349,6 +349,10 @@
           "H1"
         ]
       },
+      "Duration": {
+        "type": "string",
+        "description": "ISO 8601 duration format, e.g. PT1H for 1 hour"
+      },
       "AndroidPlatformKeyAttestationWalletInstanceAttestationIssuanceRequest": {
         "type": "object",
         "properties": {
@@ -364,6 +368,9 @@
               "$ref": "#/components/schemas/JwsAlgorithm"
             },
             "minItems": 1
+          },
+          "validity": {
+            "$ref": "#/components/schemas/Duration"
           }
         },
         "required": [
@@ -405,6 +412,9 @@
               "$ref": "#/components/schemas/JwsAlgorithm"
             },
             "minItems": 1
+          },
+          "validity": {
+            "$ref": "#/components/schemas/Duration"
           }
         },
         "required": [
@@ -429,6 +439,9 @@
               "$ref": "#/components/schemas/JwsAlgorithm"
             },
             "minItems": 1
+          },
+          "validity": {
+            "$ref": "#/components/schemas/Duration"
           }
         },
         "required": [
@@ -452,6 +465,7 @@
         "type": "string",
         "enum": [
           "unsupported_signing_algorithms",
+          "maximum_validity_exceeded",
           "invalid_challenge",
           "invalid_key_attestation",
           "unsupported_attested_key"
