# wallet-provider-service/src/main/kotlin/domain/Types.kt
@@ -17,11 +17,13 @@ package eu.europa.ec.eudi.walletprovider.domain
 
 import at.asitplus.signum.indispensable.io.ByteArrayBase64UrlSerializer
 import at.asitplus.signum.indispensable.josef.io.InstantLongSerializer
+import eu.europa.ec.eudi.walletprovider.adapter.serialization.DurationIsoStringSerializer
 import eu.europa.ec.eudi.walletprovider.adapter.serialization.UriStringSerializer
 import eu.europa.ec.eudi.walletprovider.adapter.serialization.UrlStringSerializer
 import kotlinx.serialization.Serializable
 import java.net.URI
 import java.net.URL
+import kotlin.time.Duration
 import kotlin.time.Instant
 
 typealias Base64UrlSafeByteArray =
@@ -85,3 +87,7 @@ value class Challenge(
 
     override fun toString(): String = value.toString()
 }
+
+typealias IsoStringDuration =
+    @Serializable(with = DurationIsoStringSerializer::class)
+    Duration
